# chess-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/chess_ai/: __main__.py
src/chess_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/chess_ai/agents/: minimax_agent.py  random_agent.py  registry.py
src/chess_ai/cli/: app.py
src/chess_ai/core/: game.py  player.py
src/chess_ai/web/: app.py
src/chess_ai/web/static/css/: style.css
tests/: conftest.py  test_access_gate.py  test_cli.py  test_game_state.py  test_main_menu.py  test_minimax_agent.py  test_pgn.py  test_pgn_viewer.py
